Fixed code block spacing (#2607)
Fixes #2606

--- a/assets/scss/components/_typography-improvements.scss
+++ b/assets/scss/components/_typography-improvements.scss
@@ -57,7 +57,6 @@ body {
   pre {
     font-size: var(--docs-small-font);
     line-height: 1.5;
-    padding: 1.25rem;
     border-radius: 8px;
     
     code {
